syntax = "proto3";

// Package Motor is used for defining a Motor node and its properties.
package sonrio.motor.core.v1;
import "core/v1/core.proto";
option go_package = "github.com/sonr-io/sonr/internal/motor/x/core/v1";


// (Client) RespondResponse is response to RespondRequest
message DecideResponse {
  bool success = 1; // True if Supply is Active
  string error = 2; // Error Message if Supply is not Active
}

// (Client) SearchResponse is Message for Searching for Peer
message SearchResponse {
  bool success = 1;        // Success
  string error = 2;        // Error Message
  sonrio.motor.core.v1.Peer peer = 3; // Peer Data
  string peer_id = 4;       // Peer ID
  string s_name = 5;        // SName
}


// DecisionEvent is emitted when a decision is made by Peer.
message OnTransmitDecisionResponse {
  bool decision = 1;       // true = accept, false = reject
  sonrio.motor.core.v1.Peer from = 2; // Peer that made decision
  int64 received = 3;      // Timestamp
}

// Message Sent when peer messages Lobby
message OnLobbyRefreshResponse {
  string olc = 1;                    // OLC Code of Topic
  repeated core.v1.Peer peers = 2; // User Information
  int64 received = 3;                // Invite received Timestamp
}


